maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:23: error: ';' expected but '=' found.
  (xBuggle, yBuggle) = (getX(), getY())
                     ^ShortestPathMaze:60: error: ':' expected but ',' found.
def aMurEst(x, y)
             ^ShortestPathMaze:76: error: identifier expected but '}' found.
}
^